--- a/ohs.cabal
+++ b/ohs.cabal
@@ -5,7 +5,7 @@ name:                ohs
 version:             0.1.0.0
 -- synopsis:
 -- description:
-license:             GPL-3
+license:             AGPL-3
 license-file:        LICENSE
 author:              Daniel Gröber
 maintainer:          dxld@darkboxed.org
@@ -15,27 +15,69 @@ build-type:          Simple
 -- extra-source-files:
 cabal-version:       >=1.10
 
-executable ohsd
-  hs-source-dirs:    daemon
-  main-is:           Main.hs
-  -- other-modules:
+library
+  exposed-modules: OHS.Cookies
+                   OHS.Server
+--                 OHS.Client
   -- other-extensions:
   build-depends:       base >=4.6 && <4.8,
                        bytestring,
+                       cereal,
+                       either,
+                       gsasl,
                        http-client,
                        http-client-tls,
+                       http-types,
+                       iso8601-time,
                        mtl,
+                       network,
+                       network-simple,
+                       safecopy,
+                       text,
+                       time, old-locale,
+                       transformers,
                        unix
   default-language:    Haskell2010
 
+
+
+
+executable ohsd
+  hs-source-dirs:    daemon
+  main-is:           Main.hs
+  -- other-extensions:
+  build-depends:       base >=4.6 && <4.8,
+                       bytestring,
+                       cereal,
+                       either,
+                       gsasl,
+                       http-client,
+                       http-client-tls,
+                       http-types,
+                       iso8601-time,
+                       mtl,
+                       network,
+                       network-simple,
+                       safecopy,
+                       text,
+                       time, old-locale,
+                       transformers,
+                       unix,
+                       ohs
+  default-language:    Haskell2010
+
 executable ohs-ui-gtk
+  hs-source-dirs:    client
   main-is:           Main.hs
   -- other-modules:
   -- other-extensions:
   build-depends:       base >=4.6 && <4.8,
-                       webkit >= 0.12.6,
+                       webkitgtk3 >= 0.13,
                        gtk, glib,
+                       http-types,
+                       http-client,
                        mtl,
-                       unix
+                       unix,
+                       ohs
   -- hs-source-dirs:
   default-language:    Haskell2010
