--- a/ohs.cabal
+++ b/ohs.cabal
@@ -44,6 +44,7 @@ library
                        pipes,
                        pipes-network,
                        hxt
+                       pipes-aeson,
   default-language:    Haskell2010
 
 
