--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "submodules/language-c"]
 	path = submodules/language-c
 	url = https://github.com/acowley/language-c.git
+[submodule "submodules/hxt"]
+	path = submodules/hxt
+	url = https://github.com/DanielG/hxt.git
