--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "submodules/hxt"]
 	path = submodules/hxt
 	url = https://github.com/DanielG/hxt.git
+[submodule "client-vala"]
+	path = client-vala
+	url = https://github.com/andy-morris/ohsc.git
