--- a/ohs.cabal
+++ b/ohs.cabal
@@ -51,7 +51,7 @@ library
                        pipes,
                        pipes-network,
                        pipes-aeson,
-                       hxt,
+                       hxt == 9.3.1.10000,
                        hxt-xpath,
                        safe,
                        case-insensitive,
@@ -75,7 +75,7 @@ test-suite spec
       ohs,
       base,
       hspec,
-      hxt
+      hxt == 9.3.1.10000
 
 executable update-dataset
   default-language:  Haskell2010
@@ -93,7 +93,7 @@ executable update-dataset
                        http-client-tls,
                        http-types,
                        network-uri,
-                       hxt,
+                       hxt == 9.3.1.10000,
                        hxt-xpath,
                        ohs
 
